# Parallel-File-Encryptor

./: .gitignore  CMakeLists.txt  main.cpp
src/app/include/encryptDecrypt/: Cryption.h
src/app/include/fileHandling/: EnvReader.h  IO.h  envReader.h
src/app/include/processes/: ProcessManagement.h  ProcessManagment.h  Task.h
src/app/src/encryptDecrypt/: Cryption.cpp  CryptionMain.cpp
src/app/src/fileHandling/: IO.cpp
src/app/src/processes/: ProcessManagement.cpp  ProcessManagment.cpp
